CREATED: Controller class to Book (with their validation and ResponseEntity messages), Service class to Book (implementation of the custom and defaults methods)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.datasource.url= jdbc:postgresql://localhost:5432/book-car-tools-phone-spring
-spring.datasource.username=postgres
+spring.datasource.username=lautaro
 spring.datasource.password=8462519573
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.flyway.locations=classpath:/db/migration
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 server.port=8083
