REFACTOR: Proyect Version to 0.1.5-SNAPSHOT, packages renames

--- a/pom.xml
+++ b/pom.xml
@@ -10,9 +10,9 @@
 	</parent>
 	<groupId>ar.com.BootApp</groupId>
 	<artifactId>LautaroV-Boot</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.1.5-SNAPSHOT</version>
 	<name>LautaroV-Boot</name>
-	<description>This is a project made by improving my knowleadge. In this project I will make some schemas on database (books, tools, cars and cellphones); by a rol system you will (or not) look for the elements in the database, create or delete elements (last two only for admins).</description>
+	<description>This is a project made by improving my knowledge. In this project I will make some schemas on database (books, tools, cars and cellphones); by a rol system you will (or not) look for the elements in the database, create or delete elements (last two only for admins).</description>
 	<url/>
 	<licenses>
 		<license/>
